couple different variations of linear regression using statsmodel library

--- a/NYSE_dataset.ipynb
+++ b/NYSE_dataset.ipynb
@@ -50,125 +50,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# linear regression\n",
-    "import statsmodels.api as sm\n",
+    "# prediction in-sample prices using linear regression method 1 : statsmodels library\n",
+    "\n",
     "\n",
     "\n",
     "df = price.loc[['CI']]\n",
     "df = df.set_index(keys='date',drop = True)\n",
+    "X = df.drop('close',axis = 'columns')\n",
+    "y = df[['close']]\n",
+    "X = sm.add_constant(X)\n",
     "\n",
-    "y = price.loc[['CI']]['close']\n",
-    "x, y = np.array(x), np.array(y)"
+    "\n",
+    "def linear_regression_insample_statsmodels(X,y):\n",
+    "    import statsmodels.api as sm\n",
+    "\n",
+    "    model = sm.OLS(y,X).fit()\n",
+    "    predictions = model.predict(X)\n",
+    "\n",
+    "    print_model = model.summary()\n",
+    "    print(print_model)\n",
+    "    \n",
+    "    return predictions, model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# forecasting using linear regression \n",
+    "\n",
+    "def Linear_reg_outofsample_statsmodels(X,y):\n",
+    "\n",
+    "    from sklearn.model_selection import TimeSeriesSplit\n",
+    "    from datetime import datetime\n",
+    "\n",
+    "    X.index = pd.to_datetime(X.index)\n",
+    "    y.index = pd.to_datetime(y.index)\n",
+    "    tscv = TimeSeriesSplit(n_splits = 2)\n",
+    "\n",
+    "\n",
+    "    for train_index, test_index in tscv.split(X.values):\n",
+    "\n",
+    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "\n",
+    "    X_test.merge(pd.DataFrame(model.predict(X_test),index = X_test.index), on = 'date')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return model.predict(X_test), model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# prediction in-sample prices using rolling linear regression method 2 : statsmodel \n",
+    "def rolling_linear_regression(X,y):\n",
+    "    import statsmodels.api as sm\n",
+    "    model = sm.OLS(y, X, window_type='rolling', window=100).fit()\n",
+    "    \n",
+    "    return model.predict model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prediction in-sample prices using linear regression method 2 : sci-kit library\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# summary statistic to compare different results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>open</th>\n",
-       "      <th>close</th>\n",
-       "      <th>low</th>\n",
-       "      <th>high</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1/4/2010</td>\n",
-       "      <td>35.270000</td>\n",
-       "      <td>36.369999</td>\n",
-       "      <td>35.180000</td>\n",
-       "      <td>36.410000</td>\n",
-       "      <td>3227300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/5/2010</td>\n",
-       "      <td>36.419998</td>\n",
-       "      <td>36.980000</td>\n",
-       "      <td>35.990002</td>\n",
-       "      <td>37.500000</td>\n",
-       "      <td>4564300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/6/2010</td>\n",
-       "      <td>36.939999</td>\n",
-       "      <td>36.900002</td>\n",
-       "      <td>36.540001</td>\n",
-       "      <td>37.560001</td>\n",
-       "      <td>2611900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/7/2010</td>\n",
-       "      <td>36.169998</td>\n",
-       "      <td>38.259998</td>\n",
-       "      <td>36.000000</td>\n",
-       "      <td>38.400002</td>\n",
-       "      <td>4950900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1/8/2010</td>\n",
-       "      <td>38.360001</td>\n",
-       "      <td>37.970001</td>\n",
-       "      <td>37.509998</td>\n",
-       "      <td>38.360001</td>\n",
-       "      <td>2717900</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               open      close        low       high   volume\n",
-       "date                                                         \n",
-       "1/4/2010  35.270000  36.369999  35.180000  36.410000  3227300\n",
-       "1/5/2010  36.419998  36.980000  35.990002  37.500000  4564300\n",
-       "1/6/2010  36.939999  36.900002  36.540001  37.560001  2611900\n",
-       "1/7/2010  36.169998  38.259998  36.000000  38.400002  4950900\n",
-       "1/8/2010  38.360001  37.970001  37.509998  38.360001  2717900"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Results.predict of <statsmodels.regression.linear_model.OLSResults object at 0x00000223C365D048>>\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  close   R-squared:                       1.000\n",
+      "Model:                            OLS   Adj. R-squared:                  1.000\n",
+      "Method:                 Least Squares   F-statistic:                 2.273e+06\n",
+      "Date:                Wed, 02 Oct 2019   Prob (F-statistic):               0.00\n",
+      "Time:                        11:47:07   Log-Likelihood:                -1427.2\n",
+      "No. Observations:                1762   AIC:                             2864.\n",
+      "Df Residuals:                    1757   BIC:                             2892.\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          0.0756      0.048      1.564      0.118      -0.019       0.170\n",
+      "open          -0.4860      0.016    -29.725      0.000      -0.518      -0.454\n",
+      "low            0.7521      0.017     45.191      0.000       0.719       0.785\n",
+      "high           0.7333      0.013     55.796      0.000       0.708       0.759\n",
+      "volume     -5.382e-09   1.11e-08     -0.484      0.629   -2.72e-08    1.64e-08\n",
+      "==============================================================================\n",
+      "Omnibus:                      336.097   Durbin-Watson:                   2.189\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             6572.808\n",
+      "Skew:                           0.315   Prob(JB):                         0.00\n",
+      "Kurtosis:                      12.441   Cond. No.                     1.03e+07\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.03e+07. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
     }
    ],
-   "source": [
-    "df.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
